--- a/api-omt.properties
+++ b/api-omt.properties
@@ -1,3 +1,11 @@
+springfox.documentation.swagger.v2.path=/api-docs
+server.contextPath=/salud/api-omt/v1
+server.port=9062
+spring.jackson.date-format=mx.gob.imss.cit.api.omt.RFC3339DateFormat
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
+spring.application.name= api-unidades1n
+
 # Discovery Server Access si no se configura el config-server  descomentar
 eureka.client.serviceUrl.defaultZone: http://localhost:1111/eureka/
 
