--- a/msomt-unidades1n-dev.yml
+++ b/msomt-unidades1n-dev.yml
@@ -6,7 +6,8 @@ springfox:
         
 server:
   contextPath: /salud/api-unidades1n/v1 
-  port: "${PORT}"
+  port: ${port:8283}
+  #port: "${PORT}"
   
 spring:
   jackson:
