Update and rename msomt-unidades1n-qa.yml to mscmd-unidades1n-qa.yml

--- a/mscmd-unidades1n-qa.yml
+++ b/mscmd-unidades1n-qa.yml
@@ -5,7 +5,7 @@ springfox:
         path: /api-docs
         
 server:
-  contextPath: /salud/msomt-unidades1n/v1 
+  contextPath: /salud/mscmd-unidades1n/v1 
   port: ${port}
   #port: 9070
   
@@ -22,7 +22,7 @@ spring:
       database: UNIDAD_MEDICA
 
   application:
-    name: msomt-unidades1n
+    name: mscmd-unidades1n
   
   profiles:
     active: "${activatedProperties}" 
