--- a/mscmd-unidades1n-dev.yml
+++ b/mscmd-unidades1n-dev.yml
@@ -2,11 +2,9 @@ springfox:
   documentation:
     swagger:  
       v2:
-        path: /api-docs
-        
+        path: /api-docs        
 server:
   contextPath: /salud/mscmd-unidades1n/v1 
-  #port: ${port:8283}
   port: ${port}
   
 spring:
@@ -20,9 +18,10 @@ spring:
       host: 172.16.164.15
       port: 27017
       database: UNIDAD_MEDICA
-
+      username: UNME_USER
+      password: imss2013
+      
   application:
-    #name: api-unidades1n
     name: mscmd-unidades1n
   
   profiles:
@@ -32,4 +31,5 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:1111/eureka/ 
+
 
